tests/ui/for/issue-20605.next.stderr
error[E0277]: the trait bound `dyn Iterator<Item = &'a mut u8>: IntoIterator` is not satisfied
  --> $DIR/issue-20605.rs:5:17
   |
LL |     for item in *things { *item = 0 }
   |                 ^^^^^^^ the trait `IntoIterator` is not implemented for `dyn Iterator<Item = &'a mut u8>`

error[E0277]: the size for values of type `<dyn Iterator<Item = &'a mut u8> as IntoIterator>::IntoIter` cannot be known at compilation time
  --> $DIR/issue-20605.rs:5:17
   |
LL |     for item in *things { *item = 0 }
   |                 ^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `<dyn Iterator<Item = &'a mut u8> as IntoIterator>::IntoIter`
   = note: all local variables must have a statically known size
   = help: unsized locals are gated as an unstable feature

error: the type `<_ as IntoIterator>::IntoIter` is not well-formed
  --> $DIR/issue-20605.rs:5:17
   |
LL |     for item in *things { *item = 0 }
   |                 ^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
